# wefox-ai-ipr-coverages

./: justfile  main.py  pyproject.toml
raw_data/: v2019-csuite-privateliability-de.csv  v2021-csuite-car-de.csv  v2021-csuite-privateliability-de.csv  v2022-csuite-accident-de.csv  v2022-csuite-car-de.csv  v2022-csuite-homeowner-de.csv  v2022-ebikes-de.csv  v2022-switch-accident-de.csv  v2022-switch-car-offer-de.csv  v2022-switch-homeowner-de.csv  v2023-csuite-household-de.csv  v2023-csuite-privateliability-de  - COMFORT.csv  v2023-csuite-privateliability-de - COMPACT.csv  v2023-csuite-privateliability-de COMFORT+.csv  v2023.1-csuite-car-de.csv
