[tool.poetry]
name = "coverages"
version = "0.1.0"
description = "Create a single coverage file"
authors = ["Jon Kleiman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
